# beyondfootsteps-etl

./: .gitignore  README.md  pyproject.toml
config/: config.json
data/utils/: config.json  dataSchemas.py  fetch_data.py
jobs/: create_all_jobs.py  create_asylum_decisions.py  create_asylum_requests.py  create_dashboard_summary_kpi.py  create_idp_idmc_kpi.py  create_idp_returnees_kpi.py  create_rasylum_decisions.py  create_rasylum_requests.py  create_refugee_naturalization.py  create_resettlement_summary_job.py  intake_data.py  process_all_jobs.py  process_unhcr_asylumapplications.py  process_unhcr_asylumdecisions.py  process_unhcr_idpidmc.py  process_unhcr_idpreturnees.py  process_unhcr_nowcasting.py  process_unhcr_palestinerefugees.py  process_unhcr_population.py  process_unhcr_refugeenaturalization.py  process_unhcr_refugeereturnees.py  process_unhcr_resettlementdepartures.py  process_unhcr_resettlementneeds.py  process_unhcr_resettlementsubmissions.py  process_unhcr_resettlementsubmissionsrequests.py  process_worldbank_worlddevelopmentindicators.py
libs/: utils.py
sparklibs/: intake_data.py  job.py
