[project]
name = "beyondfootsteps-etl"
version = "0.1.0"
description = ""
authors = [
    {name = "ezepsosa",email = "ezequielperez50@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyspark>=4.0.0,<5.0.0",
    "requests (>=2.32.4,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)"
]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "sparklibs" }]